# sputter

./: .gitignore  Pipfile  README.md  index.html  pyproject.toml  search.js  sputter.html
.github/workflows/: release.yml
examples/: crack_caesar.py  crack_substitution.py  crack_vigenere.py  evaluate_word_features.py
sputter/: alphabet_trie.html  alphabet_trie.py  anagram.html  cipher.html  cipher.py  coincidence.html  fitness.html  fitness.py  mung.html  mung.py  optimize.html  spacer.html  spacer.py  sputter.html  unweaver.html  unweaver.py  word_features.html  word_features.py
src/sputter/: anagram.py  sputter.py  unweaver.py  word_features.py
tests/: test_alphabet_trie.py  test_anagram.py  test_cipher.py  test_fitness.py  test_mung.py  test_optimize.py  test_spacer.py  test_unweaver.py  test_word_features.py
texput/: cipher.py  fitness.py  mung.py  optimize.py
