[project]
name = "texput"
version = "0.0.1"
authors = [
  { name="Matthew Gruskin", email="matthew.gruskin@gmail.com" },
]
description = "a TEXtual PUzzle Tools library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"texput.data" = ["*"]

[tool.pylint.format]
max-line-length = "88"