[project]
name = "sputter"
version = "0.1.0"
description = "a Statistical PUzzle TexT procEssoR library"
readme = "README.md"
authors = [
    { name = "Matt Gruskin", email = "matthew.gruskin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
]

[project.scripts]
sputter = "sputter.sputter:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pdoc>=15.0.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.ruff.lint]
preview = true
select = [
    "A",
    "B",
    "C4",
    "D",
    "E4",
    "E7",
    "E9",
    "F",
    "N",
    "PERF",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TC",
]
ignore = ["D1", "D203", "D213"]
